gitops/apps/vevsdesign/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vevsdesign
  labels:
    app.kubernetes.io/name: vevsdesign
