gitops/apps/vevsdesign/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vevsdesign
  namespace: vevsdesign
  labels:
    app: vevsdesign
spec:
  type: ClusterIP
  selector:
    app: vevsdesign
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
