gitops/apps/vevsdesign/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vevsdesign
  namespace: vevsdesign
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: vevsdesign.sk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vevsdesign
                port:
                  number: 80
    - host: www.vevsdesign.sk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vevsdesign
                port:
                  number: 80
  tls:
    - hosts:
        - vevsdesign.sk
        - www.vevsdesign.sk
      secretName: vevsdesign-tls
